# Whisper

./: .gitignore  CMakeLists.txt  lmao.txt
Whisper/: CMakeLists.txt
Whisper/src/: main.cpp
src/input/: KeyboardInput.java  MouseInput.java
src/inputs/: KeyboardInputs.java  MouseInputs.java
src/main/: Game.java  GamePanel.java  GameWindow.java  Main.java  MainClass.java
src/utils/: Constants.java
